@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-31T08:11:07Z",
-  "count_outdated" : 4858,
-  "uniques_outdated" : 1428,
+  "timestamp" : "2023-08-01T00:48:27Z",
+  "count_outdated" : 4861,
+  "uniques_outdated" : 1430,
   "count" : 4888,
   "uniques" : 1446,
   "clones" : [
-    {
-      "timestamp": "2023-07-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-18T00:00:00Z",
       "count": 1,
