@@ -1,3 +1,12 @@
+2023-08-01T00:48:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5721196701 # 1775
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-01
+* notice: last 14d: unq all: 3 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 1428 4858 / 1446 4888
+* notice: next accum: outdated-unq outdated-all / unq all: 1430 4861 / 1446 4888
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-17] / []
+
 2023-07-31T08:11:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5712248937 # 1773
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-31
